[gd_scene load_steps=4 format=3 uid="uid://dffldxh8b4xwu"]

[ext_resource type="Script" path="res://Scripts/Target.gd" id="1_jdrss"]
[ext_resource type="Texture2D" uid="uid://b370bgh4l2m4d" path="res://Sprites/target.png" id="2_iu07a"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1hc53"]
radius = 109.772

[node name="Target" type="Area2D"]
position = Vector2(579, 290)
scale = Vector2(0.189277, 0.19901)
script = ExtResource("1_jdrss")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_iu07a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1hc53")

[node name="TimeToLive" type="Timer" parent="."]
wait_time = 5.0

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="TimeToLive" to="." method="_on_time_to_live_timeout"]
